parser/pricingdsl_parser.go
// Code generated from grammar/PricingDSL.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // PricingDSL
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type PricingDSLParser struct {
	*antlr.BaseParser
}

var PricingDSLParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func pricingdslParserInit() {
	staticData := &PricingDSLParserStaticData
	staticData.LiteralNames = []string{
		"", "'.'", "'RULE'", "'IF'", "'THEN'", "'PRIORITY'", "'GROUP'", "",
		"'percent'", "'fixed'", "'final'", "'coupon'", "'promocode'", "'cert'",
		"'AND'", "'OR'", "'true'", "'=='", "'!='", "'>='", "'>'", "'<='", "'<'",
	}
	staticData.SymbolicNames = []string{
		"", "", "RULE", "IF", "THEN", "PRIORITY", "GROUP", "STATUS", "PERCENT",
		"FIXED", "FINAL", "COUPON", "PROMOCODE", "CERT", "AND", "OR", "TRUE",
		"EQ", "NE", "GE", "GT", "LE", "LT", "ID", "NUMBER", "STRING", "WS",
	}
	staticData.RuleNames = []string{
		"start", "rule", "modifier", "modifierType", "groupType", "expression",
		"comparison", "comparator", "identifier", "value",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// PricingDSLParserInit initializes any static state used to implement PricingDSLParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewPricingDSLParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func PricingDSLParserInit() {
	staticData := &PricingDSLParserStaticData
	staticData.once.Do(pricingdslParserInit)
}

// NewPricingDSLParser produces a new parser instance for the optional input antlr.TokenStream.
func NewPricingDSLParser(input antlr.TokenStream) *PricingDSLParser {
	PricingDSLParserInit()
	this := new(PricingDSLParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &PricingDSLParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "PricingDSL.g4"

	return this
}

// PricingDSLParser tokens.
const (
	PricingDSLParserEOF       = antlr.TokenEOF
	PricingDSLParserT__0      = 1
	PricingDSLParserRULE      = 2
	PricingDSLParserIF        = 3
	PricingDSLParserTHEN      = 4
	PricingDSLParserPRIORITY  = 5
	PricingDSLParserGROUP     = 6
	PricingDSLParserSTATUS    = 7
	PricingDSLParserPERCENT   = 8
	PricingDSLParserFIXED     = 9
	PricingDSLParserFINAL     = 10
	PricingDSLParserCOUPON    = 11
	PricingDSLParserPROMOCODE = 12
	PricingDSLParserCERT      = 13
	PricingDSLParserAND       = 14
	PricingDSLParserOR        = 15
	PricingDSLParserTRUE      = 16
	PricingDSLParserEQ        = 17
	PricingDSLParserNE        = 18
	PricingDSLParserGE        = 19
	PricingDSLParserGT        = 20
	PricingDSLParserLE        = 21
	PricingDSLParserLT        = 22
	PricingDSLParserID        = 23
	PricingDSLParserNUMBER    = 24
	PricingDSLParserSTRING    = 25
	PricingDSLParserWS        = 26
)

// PricingDSLParser rules.
const (
	PricingDSLParserRULE_start        = 0
	PricingDSLParserRULE_rule         = 1
	PricingDSLParserRULE_modifier     = 2
	PricingDSLParserRULE_modifierType = 3
	PricingDSLParserRULE_groupType    = 4
	PricingDSLParserRULE_expression   = 5
	PricingDSLParserRULE_comparison   = 6
	PricingDSLParserRULE_comparator   = 7
	PricingDSLParserRULE_identifier   = 8
	PricingDSLParserRULE_value        = 9
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllRule_() []IRuleContext
	Rule_(i int) IRuleContext

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_start
	return p
}

func InitEmptyStartContext(p *StartContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_start
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PricingDSLParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserEOF, 0)
}

func (s *StartContext) AllRule_() []IRuleContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRuleContext); ok {
			len++
		}
	}

	tst := make([]IRuleContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRuleContext); ok {
			tst[i] = t.(IRuleContext)
			i++
		}
	}

	return tst
}

func (s *StartContext) Rule_(i int) IRuleContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRuleContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRuleContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.ExitStart(s)
	}
}

func (s *StartContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PricingDSLVisitor:
		return t.VisitStart(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PricingDSLParser) Start_() (localctx IStartContext) {
	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, PricingDSLParserRULE_start)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(21)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == PricingDSLParserRULE {
		{
			p.SetState(20)
			p.Rule_()
		}

		p.SetState(23)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(25)
		p.Match(PricingDSLParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRuleContext is an interface to support dynamic dispatch.
type IRuleContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	RULE() antlr.TerminalNode
	STRING() antlr.TerminalNode
	IF() antlr.TerminalNode
	Expression() IExpressionContext
	THEN() antlr.TerminalNode
	Modifier() IModifierContext
	PRIORITY() antlr.TerminalNode
	NUMBER() antlr.TerminalNode
	GROUP() antlr.TerminalNode
	GroupType() IGroupTypeContext
	STATUS() antlr.TerminalNode

	// IsRuleContext differentiates from other interfaces.
	IsRuleContext()
}

type RuleContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyRuleContext() *RuleContext {
	var p = new(RuleContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_rule
	return p
}

func InitEmptyRuleContext(p *RuleContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_rule
}

func (*RuleContext) IsRuleContext() {}

func NewRuleContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RuleContext {
	var p = new(RuleContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PricingDSLParserRULE_rule

	return p
}

func (s *RuleContext) GetParser() antlr.Parser { return s.parser }

func (s *RuleContext) RULE() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserRULE, 0)
}

func (s *RuleContext) STRING() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserSTRING, 0)
}

func (s *RuleContext) IF() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserIF, 0)
}

func (s *RuleContext) Expression() IExpressionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpressionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpressionContext)
}

func (s *RuleContext) THEN() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserTHEN, 0)
}

func (s *RuleContext) Modifier() IModifierContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModifierContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModifierContext)
}

func (s *RuleContext) PRIORITY() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserPRIORITY, 0)
}

func (s *RuleContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserNUMBER, 0)
}

func (s *RuleContext) GROUP() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserGROUP, 0)
}

func (s *RuleContext) GroupType() IGroupTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGroupTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGroupTypeContext)
}

func (s *RuleContext) STATUS() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserSTATUS, 0)
}

func (s *RuleContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *RuleContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *RuleContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.EnterRule(s)
	}
}

func (s *RuleContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.ExitRule(s)
	}
}

func (s *RuleContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PricingDSLVisitor:
		return t.VisitRule(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PricingDSLParser) Rule_() (localctx IRuleContext) {
	localctx = NewRuleContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, PricingDSLParserRULE_rule)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(27)
		p.Match(PricingDSLParserRULE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(28)
		p.Match(PricingDSLParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(29)
		p.Match(PricingDSLParserIF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(30)
		p.Expression()
	}
	{
		p.SetState(31)
		p.Match(PricingDSLParserTHEN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(32)
		p.Modifier()
	}
	p.SetState(35)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PricingDSLParserPRIORITY {
		{
			p.SetState(33)
			p.Match(PricingDSLParserPRIORITY)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(34)
			p.Match(PricingDSLParserNUMBER)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}
	p.SetState(39)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PricingDSLParserGROUP {
		{
			p.SetState(37)
			p.Match(PricingDSLParserGROUP)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(38)
			p.GroupType()
		}

	}
	p.SetState(42)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == PricingDSLParserSTATUS {
		{
			p.SetState(41)
			p.Match(PricingDSLParserSTATUS)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModifierContext is an interface to support dynamic dispatch.
type IModifierContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ModifierType() IModifierTypeContext
	NUMBER() antlr.TerminalNode

	// IsModifierContext differentiates from other interfaces.
	IsModifierContext()
}

type ModifierContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModifierContext() *ModifierContext {
	var p = new(ModifierContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_modifier
	return p
}

func InitEmptyModifierContext(p *ModifierContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_modifier
}

func (*ModifierContext) IsModifierContext() {}

func NewModifierContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModifierContext {
	var p = new(ModifierContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PricingDSLParserRULE_modifier

	return p
}

func (s *ModifierContext) GetParser() antlr.Parser { return s.parser }

func (s *ModifierContext) ModifierType() IModifierTypeContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IModifierTypeContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IModifierTypeContext)
}

func (s *ModifierContext) NUMBER() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserNUMBER, 0)
}

func (s *ModifierContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModifierContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModifierContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.EnterModifier(s)
	}
}

func (s *ModifierContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.ExitModifier(s)
	}
}

func (s *ModifierContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PricingDSLVisitor:
		return t.VisitModifier(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PricingDSLParser) Modifier() (localctx IModifierContext) {
	localctx = NewModifierContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, PricingDSLParserRULE_modifier)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.ModifierType()
	}
	{
		p.SetState(45)
		p.Match(PricingDSLParserNUMBER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IModifierTypeContext is an interface to support dynamic dispatch.
type IModifierTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PERCENT() antlr.TerminalNode
	FIXED() antlr.TerminalNode
	FINAL() antlr.TerminalNode

	// IsModifierTypeContext differentiates from other interfaces.
	IsModifierTypeContext()
}

type ModifierTypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyModifierTypeContext() *ModifierTypeContext {
	var p = new(ModifierTypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_modifierType
	return p
}

func InitEmptyModifierTypeContext(p *ModifierTypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_modifierType
}

func (*ModifierTypeContext) IsModifierTypeContext() {}

func NewModifierTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ModifierTypeContext {
	var p = new(ModifierTypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PricingDSLParserRULE_modifierType

	return p
}

func (s *ModifierTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *ModifierTypeContext) PERCENT() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserPERCENT, 0)
}

func (s *ModifierTypeContext) FIXED() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserFIXED, 0)
}

func (s *ModifierTypeContext) FINAL() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserFINAL, 0)
}

func (s *ModifierTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ModifierTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ModifierTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.EnterModifierType(s)
	}
}

func (s *ModifierTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.ExitModifierType(s)
	}
}

func (s *ModifierTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PricingDSLVisitor:
		return t.VisitModifierType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PricingDSLParser) ModifierType() (localctx IModifierTypeContext) {
	localctx = NewModifierTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, PricingDSLParserRULE_modifierType)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(47)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&1792) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGroupTypeContext is an interface to support dynamic dispatch.
type IGroupTypeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COUPON() antlr.TerminalNode
	PROMOCODE() antlr.TerminalNode
	CERT() antlr.TerminalNode

	// IsGroupTypeContext differentiates from other interfaces.
	IsGroupTypeContext()
}

type GroupTypeContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGroupTypeContext() *GroupTypeContext {
	var p = new(GroupTypeContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_groupType
	return p
}

func InitEmptyGroupTypeContext(p *GroupTypeContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_groupType
}

func (*GroupTypeContext) IsGroupTypeContext() {}

func NewGroupTypeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GroupTypeContext {
	var p = new(GroupTypeContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PricingDSLParserRULE_groupType

	return p
}

func (s *GroupTypeContext) GetParser() antlr.Parser { return s.parser }

func (s *GroupTypeContext) COUPON() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserCOUPON, 0)
}

func (s *GroupTypeContext) PROMOCODE() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserPROMOCODE, 0)
}

func (s *GroupTypeContext) CERT() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserCERT, 0)
}

func (s *GroupTypeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GroupTypeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *GroupTypeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.EnterGroupType(s)
	}
}

func (s *GroupTypeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.ExitGroupType(s)
	}
}

func (s *GroupTypeContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PricingDSLVisitor:
		return t.VisitGroupType(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PricingDSLParser) GroupType() (localctx IGroupTypeContext) {
	localctx = NewGroupTypeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, PricingDSLParserRULE_groupType)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(49)
		_la = p.GetTokenStream().LA(1)

		if !((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&14336) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IExpressionContext is an interface to support dynamic dispatch.
type IExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllComparison() []IComparisonContext
	Comparison(i int) IComparisonContext
	AllAND() []antlr.TerminalNode
	AND(i int) antlr.TerminalNode
	AllOR() []antlr.TerminalNode
	OR(i int) antlr.TerminalNode
	TRUE() antlr.TerminalNode

	// IsExpressionContext differentiates from other interfaces.
	IsExpressionContext()
}

type ExpressionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyExpressionContext() *ExpressionContext {
	var p = new(ExpressionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_expression
	return p
}

func InitEmptyExpressionContext(p *ExpressionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = PricingDSLParserRULE_expression
}

func (*ExpressionContext) IsExpressionContext() {}

func NewExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ExpressionContext {
	var p = new(ExpressionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = PricingDSLParserRULE_expression

	return p
}

func (s *ExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *ExpressionContext) AllComparison() []IComparisonContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IComparisonContext); ok {
			len++
		}
	}

	tst := make([]IComparisonContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IComparisonContext); ok {
			tst[i] = t.(IComparisonContext)
			i++
		}
	}

	return tst
}

func (s *ExpressionContext) Comparison(i int) IComparisonContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IComparisonContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IComparisonContext)
}

func (s *ExpressionContext) AllAND() []antlr.TerminalNode {
	return s.GetTokens(PricingDSLParserAND)
}

func (s *ExpressionContext) AND(i int) antlr.TerminalNode {
	return s.GetToken(PricingDSLParserAND, i)
}

func (s *ExpressionContext) AllOR() []antlr.TerminalNode {
	return s.GetTokens(PricingDSLParserOR)
}

func (s *ExpressionContext) OR(i int) antlr.TerminalNode {
	return s.GetToken(PricingDSLParserOR, i)
}

func (s *ExpressionContext) TRUE() antlr.TerminalNode {
	return s.GetToken(PricingDSLParserTRUE, 0)
}

func (s *ExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.EnterExpression(s)
	}
}

func (s *ExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(PricingDSLListener); ok {
		listenerT.ExitExpression(s)
	}
}

func (s *ExpressionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case PricingDSLVisitor:
		return t.VisitExpression(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *PricingDSLParser) Expression() (localctx IExpressionContext) {
	localctx = NewExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, PricingDSLParserRULE_expression)
	var _la int

	p.SetState(60)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case PricingDSLParserID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(51)
			p.Comparison()
		}
		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == PricingDSLParserAND || _la == PricingDSLParserOR {
			{
				p.SetState(52)
				_la = p.GetTokenStream().LA(1)

				if !(_la == PricingDSLParserAND || _la == PricingDSLParserOR) {
					p.GetErrorHandler().RecoverInline(p)
				} else {
					p.GetErrorHandler().ReportMatch(p)
					p.Consume()
				}
			}
			{
				p.SetState(53)
				p.Comparison()
			}

			p.SetState(58)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
